[package]
name = "photo_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "time"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
aws-config = "0.55.3"
aws-sdk-s3 = "0.26.0"
uuid = { version = "1", features = ["v4"] }
mime = "0.3"
futures-util = "0.3"
actix-multipart = "0.6"
bcrypt = "0.14"
